--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,11 +22,8 @@ jobs:
         if [ -f Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
-        fi
-
-    - name: cd
-      run: cd FlashAuthentication/src
+        fi    
     - name: Build
-      run: go build -v .
+      run: go build -v ./FlashAuthentication/src
 
     
